# lidarSimulator

./: .gitignore  CMakeLists.txt  README.md  cow.stl  geometry.h  package.xml  raytracepolymesh.cpp  twizy.stl  twizy_low_poly.stl
include/: geometry.h
msg/: LiDAR.msg  SimulationObject.msg  SimulationRequest.msg
src/: kernel.cl  raytracepolymesh.cpp
srv/: LiDARSimulation.srv
